Some fixes to remove static hostnames...
This is gonna be a *looong* process…  Whatever idiots wrote this junk heap of code to begin with had no idea the horrors they were unleashing...

--- a/c.htm
+++ b/c.htm
@@ -8,8 +8,8 @@ Channel: #freecast<br>
 Don't have an IRC client? Get <a href=ftp://ftp.freenet.de/pub/mirc.com/mirc616.exe>mIRC (Windows)</a> or <a href=http://www.xchat.org/download/>XChat (*nix)</a>
 <br><br>
 <b>Forums</b><br>
-<a href=http://board.freecast.co.uk>board.freecast.co.uk</a><br><br>
-Please make any Bug Reports in the Forums,<br>
-Bug reports are greatly appreciated  no matter how small you think they may be :)<br>
+<a href="https://github.com/QuinnEbert/FreeCast-Revival/issues">https://github.com/QuinnEbert/FreeCast-Revival/issues</a><br><br>
+Please make any Bug Reports via GitHub repo,<br>
+Bug reports are greatly appreciated, no matter how small you think they may be :)<br>
 
 </div></td></tr></table></td></tr></table>
