Replace remaining static ".UK" references.
Good grief…  Whoever came up with this codebase really should be subjected to some form of torture outlawed by Geneva conventions.  All this, and I'm dead sure when I test it that I'm not gonna get anywhere with it.  But, as long as the silly bugger keeps knocking me around about this, I'll at least try to look like I'm making headway. :-(

--- a/faq.htm
+++ b/faq.htm
@@ -37,10 +37,10 @@
 <p><strong><a name="wmors" id="wmors"></a>How do i get more slots?</strong><br>
   <br>
   At the moment you can only officially get more slots through the 'Refer-A-Friend' link at the top, currently you will receive <strong>1 hour</strong> for each signup from emails you Refer.<br>
-  Unofficially being generally helpful on<a href="irc://irc.quakenet.org/freecast"> IRC</a> or the <a href="http://board.freecast.co.uk" target="_blank">Forums</a> may gain you extra slots, although begging for slots on either will certainly not. </p>
+  Unofficially being generally helpful on<a href="irc://irc.quakenet.org/freecast"> IRC</a> or the <a href="http://bobbyautodj.tbrnhost.com" target="_blank">Forums</a> may gain you extra slots, although begging for slots on either will certainly not. </p>
 <p><strong><a name="ccc" id="ccc"></a>I can't connect to my stream! <br>
   <br>
-</strong>This could have occurred for a number of reasons, be sure you are using the <strong>stream password</strong> and not the password you use to log in to FreeCast. You can find this password by clicking on your booked slot, this password will be different for <strong>every</strong> booked slot even if they are booked in succession. If you still can't connect post as much information as you can on<a href="irc://irc.quakenet.org/freecast"> IRC</a> or the <a href="http://board.freecast.co.uk" target="_blank">Forums</a>.</p>
+</strong>This could have occurred for a number of reasons, be sure you are using the <strong>stream password</strong> and not the password you use to log in to FreeCast. You can find this password by clicking on your booked slot, this password will be different for <strong>every</strong> booked slot even if they are booked in succession. If you still can't connect post as much information as you can on<a href="irc://irc.quakenet.org/freecast"> IRC</a> or the <a href="http://bobbyautodj.tbrnhost.com" target="_blank">Forums</a>.</p>
 <p><strong><a name="chpmnk"></a>My listeners say my stream sounds twice what it should be.<br>
     <br>
   </strong>This error will occur if you have the 'kHz' of your stream set to '22.050kHz' instead of '44.100kHz'. To fix this open your shoutcast plugin and under 'Encoder Settings' on the 'Encoder' tab change the kHz too 44.100kHz.</p>
@@ -49,5 +49,5 @@
 </strong>This can be caused by a number of things, make sure that you don't have any p2p programs running (BitTorrent,Emule,Kazaa) or anything else that could be using your upstream ( uploading ). If you don't have anything using your upstream then try decreasing the quality of your stream, i would personally recommend a stream quality of <strong>96kbps</strong>. Our servers are located in Europe so American users may need to stream at a lower quality than usual ( whilst European users should be able to stream at extreme quality! ;) ). </p>
 <p><strong><a name="hulist"></a>How do i found out how many people are listening? <br>
   <br>
-</strong>You can find this out and other information about the current stream by visiting: <a href="http://freecast.co.uk:8000/" target="_blank"><strong>http://freecast.co.uk:8000/</strong></a></p>
+</strong>You can find this out and other information about the current stream by visiting: <a href="http://bobbyautodj.tbrnhost.com:8000/" target="_blank"><strong>http://bobbyautodj.tbrnhost.com:8000/</strong></a></p>
 </div></td></tr></table></td></tr></table>
