--- a/freecast.html
+++ b/freecast.html
@@ -3,8 +3,8 @@
 <html lang='en'>
 <head>
 <meta name="robots" content="noindex,nofollow" />
-<meta http-equiv="description" content="Awstats - Advanced Web Statistics for freecast.mindslap.co.uk" />
-<title>Statistics of freecast.mindslap.co.uk</title>
+<meta http-equiv="description" content="Awstats - Advanced Web Statistics for bobbyautodj.tbrnhost.com" />
+<title>Statistics of bobbyautodj.tbrnhost.com</title>
 <style type="text/css">
 <!--
 body { font: 11px verdana, arial, helvetica, sans-serif; background-color: #FFFFFF; margin-top: 0 }
@@ -36,10 +36,10 @@ a:hover   { color: #605040; text-decoration: underline; }
 
 <body>
 <br /><span style="color: #880000">
-Error: Couldn't open server log file "/var/log/httpd/domains/freecast.mindslap.co.uk.log" : No such file or directory
+Error: Couldn't open server log file "/var/log/httpd/domains/bobbyautodj.tbrnhost.com.log" : No such file or directory
 </span><br />
 <br /><b>
-Setup ('./awstats.freecast.mindslap.co.uk.conf' file, web server or permissions) may be wrong.
+Setup ('./awstats.bobbyautodj.tbrnhost.com.conf' file, web server or permissions) may be wrong.
 </b><br />
 See AWStats documentation in 'docs' directory for informations on how to setup awstats.
 </body>
