--- a/g.htm
+++ b/g.htm
@@ -55,7 +55,7 @@ The encoder settings are largely up to you, here is a guide to help you make a d
 <p><br>
 please try to avoid using anything greater than 192kbps, as this can be very costly on our bandwidth.</p>
 <p>Once you have finished configuring 'Encoder' click the 'Output' tab.<br>
-  Fill in the address as 'freecast.co.uk'<br>
+  Fill in the address as 'bobbyautodj.tbrnhost.com'<br>
   Then enter your password and push Connect! <br>
   <div align="center">
   <img src="out_3.PNG" width="285" height="329"><br>
