--- a/gm.htm
+++ b/gm.htm
@@ -1,6 +1,6 @@
 <br><table align="center" width="500" cellpadding="1" bgcolor="#19785A" cellspacing="0"><tr><td><table width="100%" bgcolor="#E1EBEC"><tr><td><div id="size13" align=center>
 <font size=2>
 
-<p><a href="?how2">How-To Stream to FreeCast.co.uk</a></p>
+<p><a href="?how2">How-To Stream to bobbyautodj.tbrnhost.com</a></p>
 <p><a href="?faq">Frequently Asked Questions </a></p>
 </div></td></tr></table></td></tr></table>
