--- a/au.htm
+++ b/au.htm
@@ -14,6 +14,10 @@
       <td><input name="email" type="text"></td>
     </tr>
     <tr>
+      <td>Choose Password</td>
+      <td><input name="password" type="password"><br><em>If you do not enter a password one will be created for you.</em></td>
+    </tr>
+    <tr>
       <td valign="top">Show Title</td>
       <td><input name="showname" type="text"></td>
     </tr>
